--- a/problems/problem01.ipynb
+++ b/problems/problem01.ipynb
@@ -18,15 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'opening_price': '13500000', 'closing_price': '12367000', 'min_price': '11879000', 'max_price': '13533000', 'average_price': '12658106.391', 'units_traded': '17219.00839882', 'volume_1day': '17219.00839882', 'volume_7day': '90546.28484162', 'buy_price': '12367000', 'sell_price': '12376000', '24H_fluctate': '-1133000', '24H_fluctate_rate': '-8.39', 'date': '1563176732932'}\n",
-      "1654000\n",
+      "{'opening_price': '12246000', 'closing_price': '12865000', 'min_price': '12110000', 'max_price': '13451000', 'average_price': '12795183.9433', 'units_traded': '12456.11541845', 'volume_1day': '12456.11541845', 'volume_7day': '89842.51693023', 'buy_price': '12856000', 'sell_price': '12867000', '24H_fluctate': '619000', '24H_fluctate_rate': '5.05', 'date': '1563257369262'}\n",
+      "1341000\n",
       "상승장\n"
      ]
     }
