--- a/problems/problem01.ipynb
+++ b/problems/problem01.ipynb
@@ -25,8 +25,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'opening_price': '12246000', 'closing_price': '12865000', 'min_price': '12110000', 'max_price': '13451000', 'average_price': '12795183.9433', 'units_traded': '12456.11541845', 'volume_1day': '12456.11541845', 'volume_7day': '89842.51693023', 'buy_price': '12856000', 'sell_price': '12867000', '24H_fluctate': '619000', '24H_fluctate_rate': '5.05', 'date': '1563257369262'}\n",
-      "1341000\n",
+      "{'opening_price': '11389000', 'closing_price': '11682000', 'min_price': '10870000', 'max_price': '12000000', 'average_price': '11571763.9195', 'units_traded': '15145.38146112', 'volume_1day': '15145.38146112', 'volume_7day': '91794.83166249', 'buy_price': '11687000', 'sell_price': '11699000', '24H_fluctate': '293000', '24H_fluctate_rate': '2.57', 'date': '1563443255486'}\n",
+      "1130000\n",
       "상승장\n"
      ]
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -138,8 +138,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "01062078130\n",
-      "*******8130\n"
+      "00000000000\n",
+      "핸드폰 번호를 입력하세요\n"
      ]
     }
    ],
@@ -162,15 +162,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "안녕안녕안녕안녕\n",
-      "녕안\n"
+      "hihihi\n",
+      "hi\n"
      ]
     }
    ],
