--- a/notes/연습장.ipynb
+++ b/notes/연습장.ipynb
@@ -2,95 +2,86 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "-1\n",
-      "6\n",
-      "0으로는 나눌 수 없습니다.\n"
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29]\n"
      ]
     }
    ],
    "source": [
-    "# 05 workshop\n",
-    "import calc\n",
-    "\n",
-    "print(calc.plus(2, 3))\n",
-    "print(calc.minus(2, 3))\n",
-    "print(calc.multiplication(2, 3))\n",
-    "print(calc.division(5, 0))"
+    "result = []\n",
+    "for i in range(31):\n",
+    "    if i % 2 == 1:\n",
+    "        result.append(i)\n",
+    "        \n",
+    "print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    if i % 2:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 5, 10]\n",
+    "\n",
+    "for n in numbers:\n",
+    "    if n == 3:\n",
+    "        print(True)\n",
+    "        break\n",
+    "else:\n",
+    "    print(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class Circle:\n",
-    "    pi = 3.14\n",
-    "    x = 0\n",
-    "    y = 0\n",
-    "    r = 0\n",
-    "    \n",
-    "    def __init__(self, r, x, y):\n",
-    "        self.r = r\n",
-    "        self.x = x\n",
-    "        self.y = y\n",
-    "        \n",
-    "    def area(self):\n",
-    "        return self.pi * self.r * self.r\n",
-    "    \n",
-    "    def circumference(self):\n",
-    "        return 2 * self.pi * self.r\n",
-    "    \n",
-    "    def center(self):\n",
-    "        return (self.x, self.y)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "28.259999999999998\n",
-      "28.259999999999998\n",
-      "3\n",
-      "2\n",
-      "4\n",
-      "18.84\n",
-      "(2, 4)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Circle.r = 3      이건 Circle 밑에 있는 값에 억지로 끼워넣는 것ㅠ\n",
-    "# print(Circle.r)\n",
-    "# Circle.x = 2\n",
-    "# print(Circle.x)\n",
-    "# Circle.y = 4\n",
-    "# print(Circle.y)\n",
-    "# print(Circle.pi)\n",
-    "\n",
-    "r1 = Circle(3, 2, 4)\n",
-    "print(Circle.area(r1)) # 이 방법 보다는 밑의 방법이 더 좋음\n",
-    "print(r1.area())\n",
-    "print(r1.r)\n",
-    "print(r1.x)\n",
-    "print(r1.y)\n",
-    "print(r1.circumference())\n",
-    "print(r1.center())\n",
-    "# print(Circle.area())"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
