--- a/notes/연습장.ipynb
+++ b/notes/연습장.ipynb
@@ -14,6 +14,7 @@
     }
    ],
    "source": [
+    "# 홀수 뽑기\n",
     "result = []\n",
     "for i in range(31):\n",
     "    if i % 2 == 1:\n",
@@ -40,6 +41,8 @@
     }
    ],
    "source": [
+    "# 홀수 뽑기\n",
+    "# == 1을 넣지 않았지만 True로 보고 참일 때는 홀수이므로 홀수가 출력 됨.\n",
     "for i in range(10):\n",
     "    if i % 2:\n",
     "        print(i)"
@@ -59,6 +62,8 @@
     }
    ],
    "source": [
+    "# 1, 5, 10 중에서 3이 있니?\n",
+    "# 차례차례 넣었을 때 다 3이 아니니까 else로 직행!\n",
     "numbers = [1, 5, 10]\n",
     "\n",
     "for n in numbers:\n",
@@ -71,10 +76,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-6-cbfcf7cf991a>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-cbfcf7cf991a>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    def rectangle(height, width)\u001b[0m\n\u001b[1;37m                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 함수를 이용해 연산하기\n",
+    "# 왓더 버억-- 함수를 선언했으면 뭐가 있어야 해? 당연히 콜론이지!!!!!!!!!!\n",
+    "def rectangle(height, width)\n",
+    "    rec = 2 * (height + width)\n",
+    "    tangle = height * width\n",
+    "    print(f'둘레 : {rec}, 넓이 : {tangle}')\n",
+    "\n",
+    "rectangle(30, 20)"
+   ]
   },
   {
    "cell_type": "code",
