--- a/notes/07.OOP_basic.ipynb
+++ b/notes/07.OOP_basic.ipynb
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,9 +578,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "print문에 넣으면 얘가 실행됩니다.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "그냥 객체만 놔두면 얘가 나옵니다."
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p = Phone()\n",
     "print(p)\n",
