--- a/problems_original/problem03.ipynb
+++ b/problems_original/problem03.ipynb
@@ -114,14 +114,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 0, 1]\n",
+      "[4, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# 여기에 코드를 작성하세요\n",
     "\n",
+    "def lonely(couple):\n",
+    "    solo = [couple[0]]\n",
+    "    \n",
+    "    for c in couple:\n",
+    "        if c != solo[-1]:\n",
+    "            solo.append(c)\n",
+    "            \n",
+    "    return solo\n",
+    "        \n",
     "print(lonely([1, 1, 3, 3, 0, 1, 1]))\n",
-    "print(lonely2([4,4,4,3,3]))"
+    "print(lonely([4,4,4,3,3]))"
    ]
   }
  ],
