--- a/notes/07.OOP_basic.ipynb
+++ b/notes/07.OOP_basic.ipynb
@@ -417,6 +417,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Phone():\n",
+    "    power = False\n",
+    "    number = \"\"\n",
+    "    book = {}\n",
+    "    model = \"s10\"\n",
+    "    \n",
+    "    def on(self):\n",
+    "        if self.power == False:\n",
+    "            self.power = True"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
